# tripbot-ai-assistant

./: .env.example  .gitignore  AWS_BEDROCK_SETUP.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  assume-aws-role.sh  aws-setup.sh  conversation_log.txt  create_project.py  docker-compose.yml  extract_prompts.py  gunicorn.conf.py  llm_adapters.py  main.py  models.py  playground.json  pyproject.toml  routes.py  run.sh  trust-policy-template.json
src/mcp/: flight_search_mcp.py
src/mcp_travel/: airline_code_lookup.sh  flight_search_mcp.py  mcp_utils.py
src/tripbot/: app.py  booking_service.py  custom_worker.py  database.py  llm_adapters.py  main.py  models.py  routes.py  signal_handlers.py  travel_router.py  trip_planner_bot.py
src/tripbot/config/: __init__.py  logging_config.py
src/tripbot/prompts/: booking_confirmation.txt  bot_response_format.txt  budget_collection.txt  confirmation.txt  date_collection.txt  departure_location_collection.txt  destination_collection.txt  email_collection.txt  final_confirmation.txt  flight_search.txt  greeting.txt  guardContent.txt  name_collection.txt  payment_collection.txt  preferences_collection.txt  system_prompt.txt  travelers_count_collection.txt  traveller_info.txt  trip_type_collection.txt
src/utils/: mcp_style_app.py
static/: chat.js  style.css
templates/: flight_search_widget.html  index.html
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/logging/: main.tf  variables.tf
terraform/modules/logging/templates/: logging.tpl
terraform/templates/: trust-policy.json.tpl
tests/fixtures/: flight_searc_LAX_LHR.json  flight_searcch_response_sfo_jfk.json  flight_search_response.json  full_return_itineary_HYD_JFK_1way.json
tests/unit/mcp/: test_flight_search.py  test_flight_search_validation.py  test_sfo_jfk_flight_search.py
tests/unit/mcp_travel/: test_flight_search_validation.py  test_parse_date.py  test_sfo_jfk_flight_search.py
