[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripbot"
version = "0.1.0"
description = "Trip planning chatbot with conversational interface, booking system, and LLM integration using FastAPI and Uvicorn."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "email-validator>=2.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "google-generativeai>=0.8.5",
    "openai>=1.82.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "amadeus>=1.1.0",
    "pip-system-certs>=2.1.0",
    "isodate>=0.7.0",
    "aiosqlite>=0.19.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["tripbot"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
